<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Project7Up7Down</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="re_password">Enter Password Again</string>
    <string name="email">Enter Email</string>
    <string name="sign_in">Sign In</string>
    <string name="not_a_member">Not a member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_game_start">GameStartActivity</string>
    <string name="hi">Hi</string>
    <string name="name">Name</string>
    <string name="rules">Rules</string>
    <string name="play">Play</string>
    <string name="up">Up</string>
    <string name="seven">7</string>
    <string name="down">Down</string>
    <string name="score">Score</string>
    <string name="title_activity_game_decision">GameDecision</string>
    <string name="title_activity_game_shake">GameShake</string>
    <string name="shakeInstruction">Shake the phone to roll the dice</string>
    <string name="title_activity_game_result">GameResult</string>
    <string name="result">Result</string>
    <string name="result_output">Lost</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>

</resources>
