
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/StartLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vishal.project7up7down.GameDecision" >

    <LinearLayout
        android:id="@+id/WelcomeLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
	    <TextView
	        android:id="@+id/hiTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/hi"
	        android:textColor="@color/espresso"
	        android:textSize="45sp" />
	    
	    <TextView
	        android:id="@+id/nameTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="10dp"
	        android:text="@string/name"
	        android:textColor="@color/red"
	        android:textSize="45sp" />
	    
	    <TextView
	        android:id="@+id/scoreTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="10dp"
	        android:text="@string/score"
	        android:textColor="@color/red"
	        android:textSize="45sp" />
	    
	</LinearLayout>

    <LinearLayout
        android:id="@+id/UpLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/upButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/espresso"
            android:text="@string/up" />
	    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/sevenLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/espresso"
            android:text="@string/seven" />
	    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/downLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/downButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="@color/espresso"
            android:text="@string/down" />
	    
    </LinearLayout>
    
</LinearLayout>

