<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/StartLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vishal.project7up7down.GameResult" >

    <LinearLayout
        android:id="@+id/WelcomeLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
	    <TextView
	        android:id="@+id/hiTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/hi"
	        android:textColor="@color/espresso"
	        android:textSize="45sp" />
	    
	    <TextView
	        android:id="@+id/nameTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="10dp"
	        android:text="@string/name"
	        android:textColor="@color/red"
	        android:textSize="45sp" />
	    
	    <TextView
	        android:id="@+id/scoreTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="10dp"
	        android:text="@string/score"
	        android:textColor="@color/red"
	        android:textSize="45sp" />
	    
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/resultImageLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/firstDiceImageView"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/image1" />
        
        <ImageView
            android:id="@+id/secondDiceImageView"
            android:layout_width="94dp"
            android:layout_height="94dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/image1" />
       
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ResultLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/resultOuputTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:text="@string/result"
            android:textColor="@color/espresso"
            android:textSize="45sp" />
        
        <TextView
            android:id="@+id/resultOutputTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/result_output"
            android:textColor="@color/red"
            android:layout_marginLeft="20dp"
            android:textSize="45sp" />
	    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/RulesLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/exitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            
            android:background="@color/espresso"
            android:layout_weight="1"
            android:text="@string/exit" />
        
        <Button
            android:id="@+id/playAgainButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="1"
            android:background="@color/espresso"
            android:text="@string/play_again" />
	    
    </LinearLayout>
    
</LinearLayout>