<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/StartLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vishal.project7up7down.GameShake" >

    <LinearLayout
        android:id="@+id/WelcomeLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
	    <TextView
	        android:id="@+id/hiTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:text="@string/hi"
	        android:textColor="@color/espresso"
	        android:textSize="45sp" />
	    
	    <TextView
	        android:id="@+id/nameTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="10dp"
	        android:text="@string/name"
	        android:textColor="@color/red"
	        android:textSize="45sp" />
	    
	</LinearLayout>

    <LinearLayout
        android:id="@+id/InstructionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/instructionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/shakeInstruction"
            android:textColor="@color/espresso"
            android:textSize="45sp" />
        	    
    </LinearLayout>    
    
</LinearLayout>
