
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignupLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vishal.project7up7down.SignUpActivity" >

    <LinearLayout
        android:id="@+id/WelcomeLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    
	    <TextView
	        android:id="@+id/welcomeTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center_vertical"
	        android:layout_marginLeft="60dp"
	        
	        android:text="@string/sign_up"
	        android:textColor="@color/espresso"
	        android:textSize="45sp" />
	    
	</LinearLayout>

    <LinearLayout
        android:id="@+id/UsernameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal" >

	    <EditText
	        android:id="@+id/usernameEditText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_weight="1"
	        android:ems="10"
	        android:hint="@string/username" 
	        android:textColorHint="@color/espresso" >
			
	        <requestFocus />
	    </EditText>

	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/EmailLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <EditText
	        android:id="@+id/emailEditText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_weight="1"
	        android:ems="10"
	        android:hint="@string/email" 
	        android:textColorHint="@color/espresso"
	        android:inputType="textEmailAddress" />	              
	    
    </LinearLayout>

    <LinearLayout
        android:id="@+id/PasswordLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
	    
	    <EditText
	        android:id="@+id/passwordEditText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_weight="1"
	        android:ems="10"
	        android:inputType="textPassword" 
	        android:hint="@string/password" 
		    android:textColorHint="@color/espresso" />
	    
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/RePasswordLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >
	    
	    <EditText
	        android:id="@+id/rePasswordEditText"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="5dp"
	        android:layout_weight="1"
	        android:ems="10"
	        android:inputType="textPassword" 
	        android:hint="@string/re_password" 
		    android:textColorHint="@color/espresso" />
	    
	</LinearLayout>
	
    <LinearLayout
        android:id="@+id/SignInLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:background="@color/espresso"
            android:text="@string/sign_up" />
	    
    </LinearLayout>
    
</LinearLayout>
